# DEEP-tutorial-cifar10

./: DEEP-tutorial-CIFAR.ipynb  Jenkinsfile  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
cifar10/: config.py
cifar10/dataset/: make_dataset.py
cifar10/features/: build_features.py
cifar10/models/: cifar10_model.py  deepaas_api.py
cifar10/tests/: test_unit_model.py
cifar10/visualization/: visualize.py
docker/: Dockerfile.dev
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-cifar10_start.py2.ipynb
