[metadata]
name = cifar10
summary = CIFAR10
description-file =
    README.md
author = lara
author-email = lloret@ifca.unican.es
version = 1.0.0
license = MIT
home-page = https://github.com/laramaktub/cifar10
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5


[files]
packages =
    cifar10

[entry_points]

deepaas.model = 
    cifar10 = cifar10.models.deepaas_api

